# minihoard

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/mmf-cli/: Cargo.toml
crates/mmf-cli/src/: main.rs
crates/mmf-core/: Cargo.toml
crates/mmf-core/src/: api.rs  auth.rs  clean.rs  config.rs  cookies.rs  download.rs  error.rs  lib.rs  library.rs  manifest.rs  pack.rs  pipeline.rs  unpack.rs
crates/mmf-mcp/: Cargo.toml
crates/mmf-mcp/src/: main.rs
