[package]
name = "mmf-core"
description = "Core library for minihoard: MyMiniFactory auth, download, and unpack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
wreq.workspace = true
wreq-util.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
tracing.workspace = true
keyring.workspace = true
tiny_http.workspace = true
url.workspace = true
open.workspace = true
uuid.workspace = true
zip.workspace = true
tar.workspace = true
zstd.workspace = true
sha2.workspace = true
walkdir.workspace = true
thiserror.workspace = true
