[package]
name = "mmf-mcp"
description = "minihoard MCP server: browse and download your MyMiniFactory library by chat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "minihoard-mcp"
path = "src/main.rs"

[dependencies]
mmf-core = { path = "../mmf-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
